# k4Clue

./: .clang-format  .gitmodules  CMakeLists.txt  readme.md
AlpakaCore/: AllocatorConfig.h  AllocatorPolicy.h  CMakeLists.txt  CachedBufAlloc.h  CachingAllocator.h  StreamCache.h  chooseDevice.h  config.h  getDeviceCachingAllocator.h  getDeviceIndex.h  getHostCachingAllocator.h  host.cc  host.h  memory.h  workdivision.h
AlpakaCore/alpaka/: devices.cc  devices.h  initialise.cc
gaudi_opts/: clue_gaudi_wrapper.py
include/: CLDBarrelLayerTilesConstants.h  CLDEndcapLayerTilesConstants.h  CLICdetBarrelLayerTilesConstants.h  CLICdetEndcapLayerTilesConstants.h  CLUEAlgo.h  CLUECalorimeterHit.h  CLUENtuplizer.h  IO_helper.h  LArBarrelLayerTilesConstants.h  LayerTiles.h  LayerTilesConstants.h  Points.h  constexpr_cmath.h
include/alpaka/: CLUEAlgoAlpaka.h  CLUEAlgoAlpaka.hpp  CLUEAlpakaKernels.h  LayerTiles.h  PointsAlpaka.h  TileConstants.h  TilesAlpaka.h  TilesConstants.h  VecArray.h
src/: CLUEAlgo.cc  CLUECalorimeterHit.cpp  CLUENtuplizer.cpp  CMakeLists.txt  ClueGaudiAlgorithmWrapper.cpp  ClueGaudiAlgorithmWrapper.h
src/alpaka/: CLUEAlgoAlpaka.cc
src/k4clue/: CMakeLists.txt
src/k4clueCUDA/: CMakeLists.txt
src/k4clueHIP/: CMakeLists.txt
